# strategy-debugger-cli

./: .gitignore  README.md  init  init.py  pyproject.toml
docs/superpowers/plans/: 2026-05-26-debugger-cli-zero-friction-onboarding.md
docs/superpowers/specs/: 2026-05-26-debugger-cli-zero-friction-onboarding-design.md
scripts/: build_default_data.py
src/hushine_debugger/: cli.py  config.py  demo_data.py  import_package.py  init_workspace.py  integrity.py  replay.py
src/hushine_debugger/assets/: __init__.py
src/hushine_debugger/assets/default_data/: __init__.py
src/hushine_debugger/assets/default_data/binance/futures/1m/BNBUSDT/: klines.parquet
src/hushine_debugger/assets/default_data/binance/futures/1m/BTCUSDT/: klines.parquet
src/hushine_debugger/assets/default_data/binance/futures/1m/ETHUSDT/: klines.parquet
src/hushine_debugger/assets/default_data/binance/futures/1m/SOLUSDT/: klines.parquet
src/hushine_debugger/assets/default_data/binance/futures/1m/XRPUSDT/: klines.parquet
src/hushine_debugger/assets/default_data/binance/perpetual_futures/1m/BNBUSDT/: klines.parquet
src/hushine_debugger/assets/default_data/binance/perpetual_futures/1m/BTCUSDT/: klines.parquet
src/hushine_debugger/data/: __init__.py  manifest.py  parquet_store.py
src/hushine_debugger/downloader/: __init__.py  binance_futures.py
src/hushine_debugger/templates/: hushine-debug.yaml  pycharm.md  strategy.py.template  vscode-launch.json  wallet.yaml
tests/: test_cli.py  test_config.py  test_downloader.py  test_replay_cli.py  test_workspace.py
(+3 files in other folders)
