[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hushine-strategy-debugger-cli"
version = "0.1.0"
description = "Offline strategy debugger CLI for Hushine."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Hushine Tech" }]
dependencies = [
  "hushine-strategy-library>=0.1.0",
  "numpy>=1.26.0",
  "pandas>=2.1.0",
  "pyarrow>=15.0.0",
  "PyYAML>=6.0.0",
  "requests>=2.31.0",
  "zstandard>=0.22.0"
]

[project.scripts]
hushine-debug = "hushine_debugger.cli:main"

[project.optional-dependencies]
test = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["hushine_debugger*"]

[tool.setuptools.package-data]
hushine_debugger = [
  "templates/*",
  "assets/default_data/*"
]
